feature: add secondary smtp server support, usefull on staging environment
